--- a/src/app/preferences/preferences.component.scss
+++ b/src/app/preferences/preferences.component.scss
@@ -1,9 +1,8 @@
 .page-frame {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     min-height: 100vh;
-    padding: 1rem;
-    margin-top: 151.34px;
+    width: 100&;
 }
 
 .header-bar {
@@ -44,17 +43,35 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 16px;
+    box-sizing: border-box;
+    background-color: #d7dfd7;
+    border-radius: 20px;
 }
 
 .section-row {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+
+    >div:nth-child(1) {
+        display: flex;
+        align-items: center;
+
+        >img {
+            width: 24px;
+            height: 24px;
+        }
+
+        >p {
+            margin-left: 8px;
+        }
+    }
 }
 
 .row-buttons {
     display: flex;
-    gap: 0.5rem;
+    gap: 0.8rem;
     align-items: center;
 }
 
@@ -75,11 +92,33 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
+input[type=button] {
+    border-radius: 30px;
+    border: none;
+    padding: 0 8px;
+    font-family: 'quicksand';
+    font-size: 20px;
+    font-weight: 500;
+    color: #396039;
+    background-color: #faf0e6;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+
+    &.active {
+        background-color: #3d8c40;
+        color: #fff;
+    }
+
+    &:hover {
+        transform: scale(1.03);
+    }
+}
+
 .amount-fields {
     width: 100%;
     display: flex;
 
-    >img{
+    >img {
         cursor: pointer;
 
         &:hover {
@@ -92,7 +131,7 @@ input[type=number]::-webkit-outer-spin-button {
         margin-right: 8px;
     }
 
-    >label{
+    >label {
         padding: 0 8px;
         width: 60px;
     }
