--- a/src/app/preferences/preferences.component.scss
+++ b/src/app/preferences/preferences.component.scss
@@ -2,16 +2,20 @@
     display: flex;
     justify-content: center;
     min-height: 100vh;
-    width: 100&;
+    width: 100%;
 }
 
-.header-bar {
-    text-align: center;
-    margin-bottom: 1rem;
-}
+.center-div {
+    margin-top: 150px;
+    width: 100%;
+    padding: 0 68px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.top-left-action {
-    margin-bottom: 1rem;
+    >div:nth-child(1) {
+        width: 100%;
+    }
 }
 
 .main-content {
@@ -19,8 +23,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 70%;
-    margin: 0 auto;
+    width: 100%;
+    max-width: 721px;
 }
 
 .hero-card {
@@ -65,7 +69,32 @@
 
         >p {
             margin-left: 8px;
+            font-size: 24px;
+            font-weight: 600;
         }
+    }
+}
+
+.back-btn {
+    color: #396039;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'quicksand';
+    cursor: pointer;
+
+    &:hover {
+        transform: scale(1.01);
+        transition: 0.3s ease-in-out;
+    }
+
+    >img {
+        width: 25px;
+        height: 20px;
+        margin-right: 12px;
     }
 }
 
@@ -73,6 +102,7 @@
     display: flex;
     gap: 0.8rem;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer-button {
@@ -84,6 +114,10 @@
 input[type=number] {
     width: 18px;
     text-align: center;
+    font-size: 16px;
+    font-family: 'quicksand';
+    border: none;
+    background-color: #d7dfd7;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -120,6 +154,8 @@ input[type=button] {
 
     >img {
         cursor: pointer;
+        width: 25px;
+        height: 25px;
 
         &:hover {
             transition: 0.5s;
@@ -133,6 +169,14 @@ input[type=button] {
 
     >label {
         padding: 0 8px;
-        width: 60px;
+        width: 73px;
+        font-size: 20px;
+        font-family: 'quicksand';
     }
+}
+
+.generate-btn {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
 }
