recipe-page render recipes

--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </section>
-            <app-button class="generate-btn" (click)="submitPreferences()" text="Generate a recipe"></app-button>
+            <app-button class="generate-btn" (click)="submitPreferences()" text="Generate a recipe" color="#d7dfd7"></app-button>
         </main>
     </div>
 </section>
