--- a/src/app/recipes/recipes.component.scss
+++ b/src/app/recipes/recipes.component.scss
@@ -6,13 +6,125 @@
 
     >main {
         max-width: 1440px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 40px 68px;
+        box-sizing: border-box;
+        min-height: 100vh;
+
+        >.upper-half {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            align-items: center;
+
+            >.text {
+                color: white;
+
+                >p {
+                    font-size: 24px;
+                }
+
+                >h1 {
+                    font-size: 54px;
+                }
+            }
+
+            >.recipe-image {
+                width: 100%;
+                height: 200px;
+                border-radius: 10px;
+                justify-self: end;
+            }
+        }
+
 
         >.lower-half {
-            height: 400px;
-            width: 400px;
-            background-color: aliceblue;
+            display: flex;
+            gap: 24px;
+            width: 100%;
+            justify-content: center;
+
+            >div {
+                border-radius: 16px;
+                box-sizing: border-box;
+                padding: 8px;
+                height: 400px;
+                width: 400px;
+                background-color: #dbe0db;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+
+                >div {
+                    display: flex;
+                }
+
+                &:hover {
+                    transition: 0.4s ease-in-out;
+                    background-color: #b7c6b7;
+                }
+
+                >p {
+                    font-size: 20px;
+                    font-weight: 500;
+                    color: #396039;
+                }
+            }
         }
     }
+}
 
-    
+.recipe-icon {
+    width: 32px;
+    margin-right: 8px;
+}
+
+h3 {
+    margin: 8px 0;
+    font-size: 24px;
+    font-weight: 600;
+    color: #396039;
+}
+
+h2 {
+    font-size: 32px;
+    font-weight: 600;
+    color: #2f502f;
+    margin: 8px 0;
+}
+
+.new-recipe {
+    display: flex;
+    justify-content: end;
+
+
+    >button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: transparent;
+        color: white;
+        font-family: 'quicksand';
+        border: none;
+        width: 240px;
+        height: 56px;
+        font-size: 20px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #457445;
+            transition: 0.4s ease-in-out;
+        }
+
+        >.arrow-icon {
+            transform: rotate(180deg);
+            filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7473%) hue-rotate(295deg) brightness(109%) contrast(88%);
+            box-sizing: border-box;
+            padding-right: 8px;
+        }
+    }
 }
