selected-recipe basics

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <h2>{{item.title}}</h2>
                 <p>Cooking Time:</p>
-                <app-button class="btn" [text]="'View'" [color]="'#008000'" [backgroundColor]="'#faf0e6'" [hoverColor]="'#ffe397'"></app-button>
+                <app-button (click)="navigateToSelectedRecipe(i)" class="btn" [text]="'View'" [color]="'#008000'" [backgroundColor]="'#faf0e6'" [hoverColor]="'#ffe397'"></app-button>
             </div>
         </div>
         <div  class="new-recipe">
