--- a/src/app/selected-recipe/selected-recipe.component.html
+++ b/src/app/selected-recipe/selected-recipe.component.html
@@ -1,1 +1,47 @@
-<p>{{ ingredientService.recipes[ingredientService.currentRecipe].title }}</p>
+<section class="selected-recipe">
+    <div class="center-div">
+        <button class="back-btn"></button>
+        <main>
+            <div class="title-div">
+                <div class="title">
+                    <p></p>
+                    <h1></h1>
+                    <p></p>
+                </div>
+                <div class="notritional">
+                    <div>
+                        <p></p>
+                    </div>
+                    <p></p>
+                    <div>
+                        <div>for</div>
+                    </div>
+                </div>
+            </div>
+            <div class="ingredients-div">
+                <h2><img src="" alt=""><img src="" alt=""></h2>
+                <section class="ingredient">
+                    <div class="your-ingredient">
+                        <li>
+                            <ul>for</ul>
+                        </li>
+                    </div>
+                    <div class="extra-ingredient">
+                        <li>
+                            <ul>for</ul>
+                        </li>
+                    </div>
+                </section>
+            </div>
+            <div class="directions-div">
+                <h3><img src="" alt=""><img src="" alt=""></h3>
+                <div>
+                    <div>for</div>
+                </div>
+            </div>
+            <div class="like-div"></div>
+        </main>
+        <div class="cookbook"></div>
+        <button class="new-recipe-btn"></button>
+    </div>
+</section>
