--- a/src/app/selected-recipe/selected-recipe.component.html
+++ b/src/app/selected-recipe/selected-recipe.component.html
@@ -26,9 +26,7 @@
                 </section>
             </div>
             <div class="directions-div">
-                <h3>
-                    <p>Directions</p>
-                </h3>
+                <h3>Directions</h3>
                 <app-directions></app-directions>
             </div>
         </main>
