--- a/src/app/selected-recipe/dish-title/dish-title.scss
+++ b/src/app/selected-recipe/dish-title/dish-title.scss
@@ -10,6 +10,23 @@
 
     >.title {
         width: 70%;
+
+        >p {
+            font-size: 20px;
+            font-weight: 500;
+            display: flex;
+            margin: 8px 0;
+
+            >img {
+                margin-right: 8px;
+            }
+        }
+
+        >h1 {
+            font-size: 48px;
+            font-weight: 600;
+            margin: 0;
+        }
     }
 
     >.notritional {
@@ -18,6 +35,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        margin-left: 16px;
 
         >.preferences {
             display: flex;
@@ -30,10 +48,17 @@
                 box-sizing: border-box;
                 padding: 8px;
                 border-radius: 16px;
+                font-size: 18px;
+                font-weight: 500;
             }
         }
 
         >.nutri-info {
+            >p {
+                font-size: 18px;
+                font-weight: 500;
+            }
+
             >div {
                 display: flex;
                 flex-direction: row;
@@ -46,11 +71,14 @@
 
                     >p:nth-child(1) {
                         margin: 0 0 4px 0;
-                        font-weight: bold;
+                        font-size: 22px;
+                        font-weight: 700;
                     }
 
                     >p:nth-child(2) {
                         margin: 0;
+                        font-size: 20px;
+                        font-weight: 500;
                     }
                 }
             }
