--- a/src/app/selected-recipe/dish-title/dish-title.html
+++ b/src/app/selected-recipe/dish-title/dish-title.html
@@ -7,18 +7,15 @@
     </div>
     <div class="notritional">
         <div class="preferences">
-            @for (item of currentRecipe.cuisine; track $index) {
-            @if (item !== 'No preferences') {
-            <p>{{ item }}</p>
-            }
-            }
+            <p>{{ currentRecipe.cuisine}}</p>
+            <p>{{ currentRecipe.diet }}</p>
         </div>
         <div class="nutri-info">
             <p>Nutritional Information</p>
             <div>
                 @for (item of currentRecipe.nutritionalInformations; track $index) {
                 <div>
-                    <p>{{dataService.selectedRecipe.titleSection[$index] }}</p>
+                    <!-- <p>{{dataService.selectedRecipe.titleSection[$index] }}</p> -->
                     <p>{{ item }}</p>
                 </div>
                 }
