--- a/src/app/selected-recipe/dish-title/dish-title.scss
+++ b/src/app/selected-recipe/dish-title/dish-title.scss
@@ -18,6 +18,8 @@
             margin: 8px 0;
 
             >img {
+                width: 20px;
+                height: 20px;
                 margin-right: 8px;
             }
         }
