--- a/src/app/selected-recipe/selected-recipe.component.html
+++ b/src/app/selected-recipe/selected-recipe.component.html
@@ -5,7 +5,7 @@
         <main>
             <app-dish-title></app-dish-title>
             <div class="ingredients-div">
-                <h2>Ingredients</h2>
+                <h2><p>Ingredients</p></h2>
                 <section class="ingredient">
                     <div class="your-ingredient">
                         <h4>Your ingredients</h4>
@@ -26,7 +26,7 @@
                 </section>
             </div>
             <div class="directions-div">
-                <h3>Directions</h3>
+                <h3><p>Directions</p></h3>
                 <app-directions></app-directions>
             </div>
         </main>
