--- a/src/app/selected-recipe/selected-recipe.component.scss
+++ b/src/app/selected-recipe/selected-recipe.component.scss
@@ -40,13 +40,15 @@
 
         >.cookbook {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             gap: 24px;
             height: 100px;
             background-color: #ecf0ec;
             border-radius: 16px;
             margin: 32px 0;
+            padding: 8px;
+            box-sizing: border-box;
         }
     }
 }
