--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -10,7 +10,7 @@
             </div>
             <div>
                 <p>Hungry for inspiration?</p>
-                <a href="#">Go to cookbook <img class="arrow-img" src="/assets/images/landingpage/arrow.png" alt=""></a>
+                <a (click)="navigateToCookbook()">Go to cookbook <img class="arrow-img" src="/assets/images/landingpage/arrow.png" alt=""></a>
             </div>
         </div>
         <div class="right-side">
